--- a/client/src/modules/components/todoList.html
+++ b/client/src/modules/components/todoList.html
@@ -1,53 +1,37 @@
 <template>
-  <div class="card topMargin">
-    <div class="card-body">
-      <div class="row">
-        <span class="col">
-          <div class="form-check">
-            <label class="form-check-label">
-            <input change.trigger="toggleShowCompleted()" type="checkbox" class="form-check-input">
-              Show completed
-            </label>
-          </div>
-        </span>
-        <span class="col">
-          <span class="rightMargin pull-right">
-            <i click.trigger="logout()"  class="fa fa-sign-out fa-lg" aria-hidden="true"></i>
-          </span>
-          <span class="rightMargin pull-right">
-            <i click.trigger="createTodo()"  class="fa fa-plus fa-lg" aria-hidden="true"></i>
-          </span>
-        </span>
-      </div>
-    </div>
+  <div class="card">
+     <div class="card-body text-right">
+        <a click.trigger="deleteTodo()" class="btn btn-default" href="#">
+          <i class="fa fa-trash"></i>
+        </a>
+     </div>
   </div>
-  <div show.bind="todos.todosArray.length">
-    <table class="table">
-        <thead>
-          <tr>
-            <th>ToDo</th>
-            <th>Due Date</th>
-            <th>Priority</th>
-            <th>File</th>
-            <th>Edit</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr repeat.for="todo of todos.todosArray | completed:showCompleted" 
-          class="${todo.priority === 'Critical' ? 'table-secondary' : ' '} ">
-            <td>${todo.todo}</td>
-            <td>${todo.dateDue | dateFormat}</td>
-            <td>${todo.priority}</td>
-            <td><a href="http://localhost:5000/uploads/${user._id}/${todo.file.filename}"   target="_blank">${todo.file.originalName}</a></td>
-            <td>
-              <i click.trigger="editTodo(todo)" class="fa fa-pencil rightMargin" aria-hidden="true"></i>
-              <i click.trigger="deleteTodo(todo)" class="fa fa-trash rightMargin" aria-hidden="true"></i>
-              <i show.bind="!todo.completed" click.trigger="completeTodo(todo)" class="fa fa-square-o" aria-hidden="true"></i>
-              <i show.bind="todo.completed " click.trigger="completeTodo(todo)" class="fa fa-check " aria-hidden="true "></i>
-            </td>
-          </tr>
-        </tbody>
-      </table>
+  <br><br>
+  <div>
+    <ul class="list-todo list-group">
+      <li repeat.for="todo of todos.todosArray"  class="list-group-item list-group-item-action ${todo.priority}" click.trigger="selectAction(todo._id,$event)"  show.bind="!todo.completed">
+        <i click.trigger="completeTodo(todo)" class="fa fa-square-o"></i>
+        <span>${todo.todo}</span>
+        <a click.trigger="editTodo(todo)" class="pull-right">
+          <span class="fa fa-edit"></span>
+        </a>
+      </li>
+      <li class="list-group-item">
+        <i class="fa fa-square-o"></i>
+        <a href="#" click.trigger="createTodo()">Add new ToDo</a>
+      </li>
+    </ul>
+    <div class="wrapper-completed">
+      <button  class="btn btn-default" type="button" data-toggle="collapse" data-target="#completedCollapse">View completed tasks</button>
+    </div>
+    <div class="collapse" id="completedCollapse">
+      <ul class="list-completed list-group">
+        <li class="list-group-item list-group-item-action" repeat.for="todo of todos.todosArray" click.trigger="selectAction(todo._id,$event)"  show.bind="todo.completed" class.bind="(selected.indexOf(todo._id) < 0)? todo.priority : todo.priority+' active'">
+          <i click.trigger="completeTodo(todo)" class="fa fa-check "></i>
+          <span>${todo.todo}</span>
+        </li>
+      </ul>
+    </div>
   </div>
   <div show.bind="!todos.todosArray.length">
     <h2>Apparently, you don't have anything to do!</h2>
